[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/instances/spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/music.gd" type="Script" id=2]
[ext_resource path="res://scripts/asteroid_remover.gd" type="Script" id=3]
[ext_resource path="res://scripts/game_controller.gd" type="Script" id=4]
[ext_resource path="res://scripts/play_area_box.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 10 )

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_color = Color( 0.243137, 0.243137, 0.243137, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 10, 50, 10 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 10, 50, 10 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 50, 10, 10 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 50, 10, 10 )

[sub_resource type="GDScript" id=9]
script/source = "extends StaticBody

func _physics_process(delta):
	var proj_size = Common.get_projection_size()
	var shape = get_node(\"CollisionShape\").shape
	shape.extents.x = proj_size.x / 2
	shape.extents.y = proj_size.y / 2
"

[sub_resource type="BoxShape" id=8]
extents = Vector3( 1, 1, 10 )

[node name="Game" type="Spatial"]
pause_mode = 1
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )
projection = 1
size = 60.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.320769, -0.454956, 0.830736, -0.0216948, 0.873324, 0.486656, -0.946909, -0.174127, 0.270265, 18.6813, 14.0833, -0.00863552 )
light_energy = 0.8
shadow_enabled = true
directional_shadow_blend_splits = true

[node name="Spaceship" parent="." instance=ExtResource( 1 )]

[node name="Area" type="Area" parent="."]
collision_layer = 5
collision_mask = 5
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"
script = ExtResource( 2 )

[node name="TestBG" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -20 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )

[node name="LeftBox" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 0, 0 )
shape = SubResource( 4 )

[node name="RightBox" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, 0 )
shape = SubResource( 5 )

[node name="TopBox" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 40, 0 )
shape = SubResource( 6 )

[node name="BottomBox" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -40, 0 )
shape = SubResource( 7 )

[node name="RaycastBody" type="StaticBody" parent="."]
collision_layer = 8
collision_mask = 8
script = SubResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="RaycastBody"]
shape = SubResource( 8 )
